upadated amazon prime music

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                     <a>on Everyday items</a>
                 </ul>
                 <ul>
-                    <p>Amazon Prime Music</p>
+                    <p>Amazon Prime music</p>
                     <a>100 million songs,ad-free</a>
                     <a>Over 15 million podcast episodes</a>
                 </ul>
